--- a/css/entities.css
+++ b/css/entities.css
@@ -47,7 +47,7 @@
 
 .entity{
     background-size: 100%;
-    position: relative;
+    position: absolute;
     
     transition-property: left,top;
     transition-duration: 200ms;
