--- a/css/entities.css
+++ b/css/entities.css
@@ -60,3 +60,161 @@
 .enemy1{
     background-image: url(/images/Starships/Enemy_Ship_1.png);
 }
+
+.bullet-hero{
+    background-image: url(/images/Shots/Hero_Shot.png);
+}
+
+.bullet-enemy1{
+    background-image: url(/images/Shots/Enemy_Shot_1.png);
+}
+
+.bullet-enemy2{
+    background-image: url(/images/Shots/Enemy_Shot_2.png);
+}
+
+.bullet-enemy3{
+    background-image: url(/images/Shots/Enemy_Shot_3.png);
+}
+
+
+
+.explosion-1{
+    animation-name: animation-explosion-1;
+    animation-duration: 0.2s;
+    animation-iteration-count: 1;
+}
+
+.explosion-2{
+    animation-name: animation-explosion-2;
+    animation-duration: 0.2s;
+    animation-iteration-count: 1;
+}
+
+.explosion-3{
+    animation-name: animation-explosion-3;
+    animation-duration: 0.2s;
+    animation-iteration-count: 1;
+}
+
+.shot-ray{
+    animation-name: animation-shot-ray;
+    animation-duration: 0.2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes animation-shot-ray{
+    from{
+        opacity: 0%;
+    }
+    to{
+        opacity: 100%;
+    }
+}
+@keyframes animation-explosion-1{
+    from{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_1.png);
+    }
+    10%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_2.png);
+    }
+    20%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_3.png);
+    }
+    30%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_4.png);
+    }
+    40%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_5.png);
+    }
+    50%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_6.png);
+    }
+    60%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_7.png);
+    }
+    70%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_8.png);
+    }
+    80%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_9.png);
+    }
+    90%{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_10.png);
+    }
+    to{
+        background-image: url(/images/Explosions/Explosion1/Explosion1_11.png);
+    }
+}
+
+@keyframes animation-explosion-2{
+    from{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_1.png);
+    }
+    10%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_2.png);
+    }
+    20%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_3.png);
+    }
+    30%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_4.png);
+    }
+    40%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_5.png);
+    }
+    50%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_6.png);
+    }
+    60%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_7.png);
+    }
+    70%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_8.png);
+    }
+    80%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_9.png);
+    }
+    90%{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_10.png);
+    }
+    to{
+        background-image: url(/images/Explosions/Explosion2/Explosion2_11.png);
+    }
+}
+
+@keyframes animation-explosion-3{
+    from{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_1.png);
+    }
+    10%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_2.png);
+    }
+    20%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_3.png);
+    }
+    30%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_4.png);
+    }
+    40%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_5.png);
+    }
+    50%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_6.png);
+    }
+    60%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_7.png);
+    }
+    70%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_8.png);
+    }
+    80%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_9.png);
+    }
+    90%{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_10.png);
+    }
+    to{
+        background-image: url(/images/Explosions/Explosion3/Explosion3_11.png);
+    }
+}
