--- a/css/entities.css
+++ b/css/entities.css
@@ -94,6 +94,22 @@
     background-image: url(/images/Shots/Enemy_Shot_4.png);
 }
 
+.bonus-heal{
+    background-image: url(/images/Bonuses/HP_Bonus.png);
+}
+
+.bonus-heroAttackSpeed{
+    background-image: url(/images/Bonuses/Attack_Speed_Bonus.png);
+}
+
+.bonus-heroMoveSpeed{
+    background-image: url(/images/Bonuses/Hero_Speed_Bonus.png);
+}
+
+.bonus-enemyMoveSpeedDebuff{
+    background-image: url(/images/Bonuses/Enemy_Speed_Debuff_Bonus.png);
+}
+
 
 
 
@@ -127,11 +143,31 @@
     animation-iteration-count: 1;
 }
 
-.damaged{
+.damagedEnemy{
     animation-name: animation-damaged;
-    animation-duration: 0.4s;
+    animation-duration: 0.2s;
     animation-iteration-count: 1;
 }
+
+/* .heroIsDamaged{
+    animation-name: shake;
+    animation-duration: 0.2s;
+    animation-iteration-count: 2;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  } */
 
 @keyframes animation-damaged{
     from{
